# agentic-microservices-showcase

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: __init__.py
core/agents/: __init__.py  async_agent.py  base.py  reflexion.py  registry.py
core/context/: __init__.py  bounded_context.py
core/evaluation/: __init__.py  llm_judge.py
core/mcp/: __init__.py  server.py
core/memory/: __init__.py  hierarchy.py
core/messaging/: __init__.py  bus.py  events.py
core/patterns/: __init__.py  circuit_breaker.py
core/topologies/: __init__.py  multi_agent.py
docs/: ARCHITECTURE.md  AZURE-SETUP.md  CONCEPTS.md
infra/: README.md  deploy.sh  main.bicep
infra/modules/: appinsights.bicep  container-apps.bicep  keyvault.bicep  openai.bicep  servicebus.bicep
infra/parameters/: dev.bicepparam
notebooks/chapter-01-microservices-architecture/: 01-microservices-architecture.ipynb
notebooks/chapter-02-agentic-foundations/: 02-agentic-foundations.ipynb
notebooks/chapter-03-scalable-architectures/: 03-scalable-architectures.ipynb
notebooks/chapter-04-agent-integration/: 04-agent-integration.ipynb
notebooks/chapter-05-synchronous-mcp/: 05-synchronous-mcp.ipynb
notebooks/chapter-06-async-messaging/: 06-async-messaging.ipynb
notebooks/chapter-07-domain-segregation/: 07-domain-segregation.ipynb
notebooks/chapter-08-cicd-production/: 08-cicd-production.ipynb
tests/: test_circuit_breaker.py  test_memory.py  test_messaging.py  test_reflexion.py
