[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-microservices-showcase"
version = "0.1.0"
description = "Showcase code for the book 'Agentic Microservices'"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50.0",
    "azure-identity>=1.17.0",
    "pydantic>=2.8.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.29.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "nbformat>=5.9.0",
]
azure = [
    "azure-ai-projects>=1.0.0b4",
    "azure-servicebus>=7.12.0",
    "azure-eventhub>=5.12.0",
    "azure-keyvault-secrets>=4.8.0",
    "azure-monitor-opentelemetry>=1.6.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
